# SkillBox-Module_3-Task_1

./: CMakeLists.txt  README.md
base/: film.json
src/: CMakeLists.txt  main.cpp
